--- a/musiconline.html
+++ b/musiconline.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-<h2><u><a href="home.html"><font color="white" size="10">LUNATIC MUSIC</h2></a></u></font>
+<h2><a href="index.html"><font color="white" size="10">LUNATIC MUSIC</h2></a></font>
 <nav id="nav01"></nav>
 <div id="banner"></div><hr>
 <div id="main">
