--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link  rel="stylesheet" href="home1.css">
 </head>
 <body>
-<h2><a href="home.html"><font color="white" size="10">LUNATIC MUSIC</h2></a></font>
+<h2><a href="index.html"><font color="white" size="10">LUNATIC MUSIC</h2></a></font>
 <nav id="nav01"></nav>
 <div id="banner"></div><hr>
 <div id="main">
