--- a/gallery.html
+++ b/gallery.html
@@ -12,23 +12,44 @@
 <font color="white">
 <center>
 <h2><u>WHERE WORDS FAIL MUSIC STARTS </u></h2></center>
+  <h3>MUSIC GALLERY</h3>  
 <div class="city">
-<center><h2><a href="music2.html"> MUSIC OF LOVE</a></h2></center>
+<center><h2><a href="thescript.html">THE SCRIPT</a></h2></center>
 <p><img src="script2.jpg" width="300" height="150" border="2">
 </p>
 </div>
 <div class="city">
-<center><h2><a href="music3.html">MUSIC HEALS</a></h2></center>
+<center><h2><a href="maroon.html">MAROON 5</a></h2></center>
 <p><img src="eminem-52fe6e8b-hero.jpg" width="300" height="150" border="2">
 </p>
 
 </div>
 <div class="city">
-<center><h2><a href="music4.html">HIP HOP</a></h2></center>
+<center><h2><a href="eminem.html">EMINEM</a></h2></center>
+<p><img src="993a80474ac4af1c71d57edbea35e311_large.jpeg" width="300" height="150" border="2">
+</p>
+</div>
+  
+  
+<div class="city">
+<center><h2><a href="sean.html">JAY SEAN</a></h2></center>
 <p><img src="993a80474ac4af1c71d57edbea35e311_large.jpeg" width="300" height="150" border="2">
 </p>
 </div>
 
+<div class="city">
+<center><h2><a href="one.html">ONE DIRECTION</a></h2></center>
+<p><img src="993a80474ac4af1c71d57edbea35e311_large.jpeg" width="300" height="150" border="2">
+</p>
+</div>
+  
+  
+<div class="city">
+<center><h2><a href="iyaz.html">IYAZ</a></h2></center>
+<p><img src="993a80474ac4af1c71d57edbea35e311_large.jpeg" width="300" height="150" border="2">
+</p>
+</div>
+  
 </div>
 </font>
 <script src="home2.js"></script>
