--- a/gallery.html
+++ b/gallery.html
@@ -11,11 +11,11 @@
 </div>
 <font color="white">
 <center>
-<h2><u>WHERE WORDS FAIL MUSIC STARTS </u></h2></center>
-  <h3>MUSIC GALLERY</h3>  
+<h2><u>WHERE WORDS FAIL MUSIC STARTS </u></h2>
+  <h3>MUSIC GALLERY</h3>  </center>
 <div class="city">
 <center><h2><a href="thescript.html">THE SCRIPT</a></h2></center>
-<p><img src="script2.jpg" width="300" height="150" border="2">
+<p><img src="the-script-logo.jpeg" width="300" height="150" border="2">
 </p>
 </div>
 <div class="city">
