--- a/gallery.html
+++ b/gallery.html
@@ -20,13 +20,13 @@
 </div>
 <div class="city">
 <center><h2><a href="maroon.html">MAROON 5</a></h2></center>
-<p><img src="eminem-52fe6e8b-hero.jpg" width="300" height="150" border="2">
+<p><img src="" width="300" height="150" border="2">
 </p>
 
 </div>
 <div class="city">
 <center><h2><a href="eminem.html">EMINEM</a></h2></center>
-<p><img src="993a80474ac4af1c71d57edbea35e311_large.jpeg" width="300" height="150" border="2">
+<p><img src="eminem-52fe6e8b-hero.jpg" width="300" height="150" border="2">
 </p>
 </div>
   
