--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 </div>
-<font color="white">
+<!-- <font color="white">
 <h2>CONNCET WITH US </h2>
 <div class="city">
 <center><h2><a href="form.html">CONTACT US </a></h2></center>
@@ -79,6 +79,7 @@
 </p>
 </div>
 </font>
+-->
 <script src="home2.js"></script>
 </body>
 </html>
