--- a/music3.html
+++ b/music3.html
@@ -1,6 +1,20 @@
 <html>
 <head>
 <link  rel="stylesheet" href="home1.css">
+<link href="css/style.css" rel="stylesheet">
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
+  <script src="js/jquery.ui.touch-punch.min.js"></script>
+  <script src="js/jquery.jplayer.min.js"></script>
+  <script src="js/jplayer.playlist.min.js"></script>
+  <script src="js/id3.min.js"></script>
+  <script src="js/iscroll.min.js"></script>
+  
+  <script src="js/jquery.linerPlayer.js"></script>      
+  
+  <link href="HERE/here.css" rel="stylesheet">
+  <script src="HERE/here.js"></script>
 <style>
 .pagination a {
     color: black;
@@ -73,6 +87,31 @@
 <br><br><br>
 </div>
 <br>
+<script>
+    jQuery(function($) {
+      $('body').linerPlayer({
+        firstPlaying: 0,
+        autoplay: true,
+        shuffle: false,
+        //veryThin: true,
+        slideAlbumsName: true,
+        nowplaying2title: true,
+        roundedCorners: true,
+        //accentColor:"#cc181e",  //008DDE      
+        pluginPath: "/canyon/liner/", // <<< IMPORTANT! - Change this to your path to the plugin folder
+        playlist: [ //♩ ♪ ☊ ♫ ♬ //
+          {mp3:"muz/itgirl.mp3", title:"IT GIRL", artist:"JASON DURELO", album:"Single", cover:"muz/img/ItGirl.jpg"},
+          {mp3:"muz/The Best of Both Worlds.mp3", title:"The Best of Both Worlds", artist:"WWE Team", album:"WWE", cover:"muz/img/wwe.jpg"},
+          {mp3:"muz/Swedish_House_Mafia_Feat._John_Martin_-_Dont_You_Worry_Child.mp3", title:"DON'T YOU WORRY CHILD", artist:"SHM", album:"Single", cover:"muz/img/shm.jpg"},
+          {mp3:"muz/The Chainsmokers - Closer (Lyric) ft. Halsey.mp3", title:"CLOSER", artist:"THE CHAINSMOKERS", album:"LOVE", cover:"muz/img/Closer.png"},
+          {mp3:"muz/The_Pussycat_Dolls_Jai_Ho.mp3", title:"JAI HO", artist:"NICOLE", album:"SLUMDOG", cover:"muz/img/jai.jpg"},
+          {mp3:"muz/Morning Train (9 to5).mp3", title:"Morning Train (9 to5)", artist:"Sheena Easton", album:"Country", cover:"muz/img/Morning_Train.jpg"},
+          {mp3:"muz/superhero.mp3", title:"SUPERHEROS", artist:"THE SCRIPT", album:"SCIENCE & FAITH", cover:"muz/img/The_Script.png"}
+        ]
+      });
+      
+    });
+  </script>
 <!--
 <font color="white">
 <h2><u>CONNCET WITH US </u></h2>
