--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
 
 </audio><hr></font>
 </pre>
+<pre>
+<h2><u>REPLAY BY IYAZ</h2></u>
+<audio controls>
+  <source src="iyaz-replay.mp3" type="audio/ogg">
+  <source src="iyaz-replay.mp3" type="audio/mpeg">
+
+</audio><hr></font>
+</pre>
 
 
 </div>
