--- a/music4.html
+++ b/music4.html
@@ -80,9 +80,10 @@
   <a  href="musiconline.html">1</a>
   <a  href="music2.html">2</a>
   <a  href="music3.html">3</a>
-  <a class="active" href="music4.html">4</a>
+  <a href="music4.html">4</a>
   <a href="music5.html">5</a>
-  <a href="music5.html">&raquo;</a>
+  <a class="active" href="music6.html">6</a>
+  <a href="music6.html">&raquo;</a>
 </div>
 <br><br><br>
 </div>
