--- a/music3.html
+++ b/music3.html
@@ -82,7 +82,7 @@
   <a class="active" href="music3.html">3</a>
   <a href="music4.html">4</a>
   <a href="music5.html">5</a>
-  <a href="music5.html">&raquo;</a>
+  <a href="music6.html">6</a>
 </div>
 <br><br><br>
 </div>
