--- a/index.html
+++ b/index.html
@@ -81,7 +81,46 @@
 
 </audio><hr></font>
 </pre>
+<pre>
+<h2>DON'T GET IN MY WAT - ZACK HEMSEY</h2>
+<audio controls>
+  <source src="dontgetinmyway.mp3" type="audio/ogg">
+  <source src="dontgetinmyway.mp3" type="audio/mpeg">
 
+</audio><hr></font>
+</pre>
+<pre>
+<h2>UNSTOPPABLE - SIA</h2>
+<audio controls>
+  <source src="Unstoppable.mp3" type="audio/ogg">
+  <source src="Unstoppable.mp3" type="audio/mpeg">
+
+</audio><hr></font>
+</pre>
+<pre>
+<h2>2 Chainz & Wiz Khalifa - WE OWN IT </h2>
+<audio controls>
+  <source src="Weownit.mp3" type="audio/ogg">
+  <source src="Weownit.mp3" type="audio/mpeg">
+
+</audio><hr></font>
+</pre>
+<pre>
+<h2>2WEI, JOZNEZ, KATEM - READY FOR WAR</h2>
+<audio controls>
+  <source src="readyforwar.mp3" type="audio/ogg">
+  <source src="readyforwar.mp3" type="audio/mpeg">
+
+</audio><hr></font>
+</pre>
+<pre>
+<h2>RAG'n'BONE MAN - I AM ONLY HUMAN</h2>
+<audio controls>
+  <source src="Human.mp3" type="audio/ogg">
+  <source src="Human.mp3" type="audio/mpeg">
+
+</audio><hr></font>
+</pre>
 
 </div>
 
