--- a/musiconline.html
+++ b/musiconline.html
@@ -60,6 +60,15 @@
 </audio><hr></font>
 </pre>
 
+<pre>
+<h2><u>BEFORE THE WORST - THE SCRIPT</h2></u>
+<audio controls>
+  <source src="beforetheworst.mp3" type="audio/ogg">
+  <source src="beforetheworst.mp3" type="audio/mpeg">
+
+</audio><hr></font>
+</pre>
+
 <!--PAGINATION -->
 <div class="pagination">
   <a href="musiconline.html">&laquo;</a>
