--- a/musiconline.html
+++ b/musiconline.html
@@ -61,7 +61,7 @@
 </pre>
 
 <pre>
-<h2><u>BEFORE THE WORST - THE SCRIPT</h2></u>
+<h2><u>BEFORE THE WORST BY THE SCRIPT</h2></u>
 <audio controls>
   <source src="beforetheworst.mp3" type="audio/ogg">
   <source src="beforetheworst.mp3" type="audio/mpeg">
