--- a/musiconline.html
+++ b/musiconline.html
@@ -69,6 +69,24 @@
 </audio><hr></font>
 </pre>
 
+<pre>
+<h2><u>ANGEL WITH A SHOTGUN BY THE CAB</h2></u>
+<audio controls>
+  <source src="angelwithashotgun.mp3" type="audio/ogg">
+  <source src="angelwithashotgun.mp3" type="audio/mpeg">
+
+</audio><hr></font>
+</pre>
+
+<pre>
+<h2><u>7 YEARS OLD BY LUCAS GRAHAM</h2></u>
+<audio controls>
+  <source src="7yearsold.mp3" type="audio/ogg">
+  <source src="7yearsold.mp3" type="audio/mpeg">
+
+</audio><hr></font>
+</pre>
+
 <!--PAGINATION -->
 <div class="pagination">
   <a href="musiconline.html">&laquo;</a>
