--- a/musiconline.html
+++ b/musiconline.html
@@ -28,7 +28,7 @@
 <h1>MUSIC STARTS HERE </h1>
 <center>
 <pre>
-<h2><u>BREAKEVEN BY-THE SCRIPT</h2></u>
+<h2>BREAKEVEN BY-THE SCRIPT</h2>
 <audio controls>
   <source src="breakeven.mp3" type="audio/ogg">
   <source src="breakeven.mp3" type="audio/mpeg">
@@ -36,7 +36,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>THE SHOW MUST GO ON BY LUPEFIASCO</h2></u>
+<h2></h2>THE SHOW MUST GO ON BY LUPEFIASCO</h2>
 <audio controls>
   <source src="lupefiasco.mp3" type="audio/ogg">
   <source src="lupefiasco.mp3" type="audio/mpeg">
@@ -44,7 +44,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>FOR THE FIRST TIME BY THE SCRIPT</h2></u>
+<h2>FOR THE FIRST TIME BY THE SCRIPT</h2>
 <audio controls>
   <source src="for.mp3" type="audio/ogg">
   <source src="for.mp3" type="audio/mpeg">
@@ -52,7 +52,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>BLANK SPACE BY TAYLOR SWIFT</h2></u>
+<h2>BLANK SPACE BY TAYLOR SWIFT</h2>
 <audio controls>
   <source src="BlankSpace.mp3" type="audio/ogg">
   <source src="BlankSpace.mp3" type="audio/mpeg">
@@ -61,7 +61,7 @@
 </pre>
 
 <pre>
-<h2><u>BEFORE THE WORST BY THE SCRIPT</h2></u>
+<h2>BEFORE THE WORST BY THE SCRIPT</h2>
 <audio controls>
   <source src="beforetheworst.mp3" type="audio/ogg">
   <source src="beforetheworst.mp3" type="audio/mpeg">
@@ -70,7 +70,7 @@
 </pre>
 
 <pre>
-<h2><u>ANGEL WITH A SHOTGUN BY THE CAB</h2></u>
+<h2>ANGEL WITH A SHOTGUN BY THE CAB</h2>
 <audio controls>
   <source src="angelwithashotgun.mp3" type="audio/ogg">
   <source src="angelwithashotgun.mp3" type="audio/mpeg">
@@ -79,7 +79,7 @@
 </pre>
 
 <pre>
-<h2><u>7 YEARS OLD BY LUCAS GRAHAM</h2></u>
+<h2>7 YEARS OLD BY LUCAS GRAHAM</h2>
 <audio controls>
   <source src="7yearsold.mp3" type="audio/ogg">
   <source src="7yearsold.mp3" type="audio/mpeg">
