--- a/music2.html
+++ b/music2.html
@@ -42,7 +42,7 @@
 <h1>MUSIC STARTS HERE </h1>
 <center>
 <pre>
-<h2><u>SUPERHERO - THE SCRIPT</h2></u>
+<h2></h2>SUPERHERO - THE SCRIPT</h2>
 <audio controls>
   <source src="superhero.mp3" type="audio/ogg">
   <source src="superhero.mp3" type="audio/mpeg">
@@ -50,7 +50,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>ROAR - KATY PERRY</h2></u>
+<h2>ROAR - KATY PERRY</h2>
 <audio controls>
   <source src="roar.mp3" type="audio/ogg">
   <source src="roar.mp3" type="audio/mpeg">
@@ -58,7 +58,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>SUGAR - MAROON 5 (ADAM LEVINE) </h2></u>
+<h2>SUGAR - MAROON 5 (ADAM LEVINE) </h2>
 <audio controls>
   <source src="sugar.mp3" type="audio/ogg">
   <source src="sugar.mp3" type="audio/mpeg">
@@ -66,7 +66,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>KEEP YUR HEAD UP - ANDY GRAMMAR</h2></u>
+<h2>KEEP YUR HEAD UP - ANDY GRAMMAR</h2>
 <audio controls>
   <source src="keepyourheadup.mp3" type="audio/ogg">
   <source src="keepyourheadup.mp3" type="audio/mpeg">
