--- a/music2.html
+++ b/music2.html
@@ -42,7 +42,7 @@
 <h1>MUSIC STARTS HERE </h1>
 <center>
 <pre>
-<h2></h2>SUPERHERO - THE SCRIPT</h2>
+<h2>SUPERHERO - THE SCRIPT</h2>
 <audio controls>
   <source src="superhero.mp3" type="audio/ogg">
   <source src="superhero.mp3" type="audio/mpeg">
