--- a/music3.html
+++ b/music3.html
@@ -42,7 +42,7 @@
 <h1>MUSIC STARTS HERE </h1>
 <center>
 <pre>
-<h2><u>IT GIRL - JASON DURELO</h2></u>
+<h2>IT GIRL - JASON DURELO</h2>
 <audio controls>
   <source src="itgirl.mp3" type="audio/ogg">
   <source src="itgirl.mp3" type="audio/mpeg">
@@ -50,7 +50,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>DEMONS - IMAGINE DRAGONS</h2></u>
+<h2>DEMONS - IMAGINE DRAGONS</h2>
 <audio controls>
   <source src="demon.mp3" type="audio/ogg">
   <source src="demon.mp3" type="audio/mpeg">
@@ -58,7 +58,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>I'LL STAND BY YOU  - GLEE CAST</h2></u>
+<h2>I'LL STAND BY YOU  - GLEE CAST</h2>
 <audio controls>
   <source src="glee.mp3" type="audio/ogg">
   <source src="glee.mp3" type="audio/mpeg">
@@ -66,7 +66,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>I AM COMING HOME - DIRTY DIDDY MONEY</h2></u>
+<h2>I AM COMING HOME - DIRTY DIDDY MONEY</h2>
 <audio controls>
   <source src="cominghome.mp3" type="audio/ogg">
   <source src="cominghome.mp3" type="audio/mpeg">
