--- a/music4.html
+++ b/music4.html
@@ -42,7 +42,7 @@
 <h1>MUSIC STARTS HERE </h1>
 <center>
 <pre>
-<h2><u>GOOD'OL DAYS  - THE SCRIPT</h2></u>
+<h2>GOOD'OL DAYS  - THE SCRIPT</h2>
 <audio controls>
   <source src="good.mp3" type="audio/ogg">
   <source src="good.mp3" type="audio/mpeg">
@@ -50,7 +50,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>SAY WHAT YOU NEED TO SAY - JOHN MAYER</h2></u>
+<h2>SAY WHAT YOU NEED TO SAY - JOHN MAYER</h2>
 <audio controls>
   <source src="say.mp3" type="audio/ogg">
   <source src="say.mp3" type="audio/mpeg">
@@ -58,7 +58,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>HEARTLESS - KRIS ALLEN </h2></u>
+<h2>HEARTLESS - KRIS ALLEN </h2>
 <audio controls>
   <source src="heartless.mp3" type="audio/ogg">
   <source src="heartless.mp3" type="audio/mpeg">
@@ -66,7 +66,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>CRY - MANDY MOORE</h2></u>
+<h2>CRY - MANDY MOORE</h2>
 <audio controls>
   <source src="cry.mp3" type="audio/ogg">
   <source src="cry.mp3" type="audio/mpeg">
