--- a/music5.html
+++ b/music5.html
@@ -42,7 +42,7 @@
 <h1>MUSIC STARTS HERE </h1>
 <center>
 <pre>
-<h2><u>MILLIONAIRES - THE SCRIPT</h2></u>
+<h2>MILLIONAIRES - THE SCRIPT</h2>
 <audio controls>
   <source src="Millionaires.mp3" type="audio/ogg">
   <source src="Millionaires.mp3" type="audio/mpeg">
@@ -50,7 +50,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>WE WON'T STOP DREAMING - PINKZEBRA</h2></u>
+<h2>WE WON'T STOP DREAMING - PINKZEBRA</h2>
 <audio controls>
   <source src="pink.mp3" type="audio/ogg">
   <source src="pink.mp3" type="audio/mpeg">
@@ -58,7 +58,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>FIGHT SONG - RACHEL PLATTEN</h2></u>
+<h2>FIGHT SONG - RACHEL PLATTEN</h2>
 <audio controls>
   <source src="fight.mp3" type="audio/ogg">
   <source src="fight.mp3" type="audio/mpeg">
@@ -66,7 +66,7 @@
 </audio><hr></font>
 </pre>
 <pre>
-<h2><u>SOME NIGHTS - FUN</h2></u>
+<h2>OME NIGHTS - FUN</h2>
 <audio controls>
   <source src="fun.mp3" type="audio/ogg">
   <source src="fun.mp3" type="audio/mpeg">
